--- a/Cozy_Cuisine/Views/Shared/_Layout.cshtml
+++ b/Cozy_Cuisine/Views/Shared/_Layout.cshtml
@@ -9,44 +9,52 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/2.2.2/css/dataTables.dataTables.css" /> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="~/Cozy_Cuisine.styles.css" asp-append-version="true" />
+    <link href="~/css/promo.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/84ccdc0b43.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=VT323&display=swap" rel="stylesheet">
 </head>
-<body>
+
+<body>  
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="pnav navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow fixed-top" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Cozy_Cuisine</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/img/logo.png" class="logoo img-fluid" alt="Alternate Text" />
+                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 d-sm-inline-flex justify-content-evenly">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="pnav-link nav-link rounded-3 px-5" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">About</a>
+                            <a class="pnav-link nav-link rounded-3 px-5" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">Gallery</a>
+                            <a class="pnav-link nav-link rounded-3 px-5" asp-area="" asp-controller="Home" asp-action="Gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">News</a>
+                            <a class="pnav-link nav-link rounded-3 px-5" asp-area="" asp-controller="Home" asp-action="News">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacts">Contact</a>
+                            <a class="pnav-link nav-link rounded-3 px-5" asp-area="" asp-controller="Home" asp-action="Contacts">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">Credits</a>
+                            <a class="pnav-link nav-link rounded-3 px-5" asp-area="" asp-controller="Home" asp-action="Credits">Credits</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">Wiki</a>
+                            <a class="pnav-link nav-link rounded-3 px-5" asp-area="" asp-controller="Home" asp-action="Wiki">Wiki</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">Donwload</a>
+                            <a class="pnav-link nav-link rounded-3 px-5" asp-area="" asp-controller="Home" asp-action="Download">Download</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn text-dark btn-outline-warning" asp-area="" asp-controller="Home" asp-action="UnderConstruction">Play Now</a>
+                            <a class="pnbtn btn px-4 shadow-lg" asp-area="" asp-controller="Home" asp-action="UnderConstruction">Play Now</a>
                         </li>
                     </ul>
                 </div>
@@ -54,18 +62,18 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container-fluid p-0 m-0">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-  @*   <footer class="border-top footer text-muted">
+    <footer class="promofooter border-top footer">
         <div class="container">
-            &copy; 2025 - Cozy_Cuisine - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 Cozy Cuisine
         </div>
     </footer>
-                  *@                                               
+                                                               
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>@* 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
